plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

sourceSets.main.resources {
    // Include resources generated by data generators.
    srcDir('src/generated/resources')

    // Exclude common development only resources from finalized outputs
    exclude("**/*.bbmodel") // BlockBench project files
    exclude("src/generated/**/.cache") // datagen cache files
}

sourceSets.test.compileClasspath += sourceSets.main.compileClasspath
sourceSets.test.runtimeClasspath += sourceSets.main.runtimeClasspath

repositories {
    maven {
        url = uri("https://cursemaven.com")
    }
}

base {
    archivesName = mod_id
}

// Mojang ships Java 25 to end users in 26.1.2, so mods should target Java 25.
java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }

        data {
            clientData()
            programArguments.addAll '--mod', mod_id, '--all',
                    '--output', file('src/generated/resources/').getAbsolutePath(),
                    '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    localRuntime "curse.maven:ferritecore-429235:7806039"
    localRuntime "curse.maven:biomespy-1376024:8073567"

    compileOnly "curse.maven:jei-238222:8108851"
    localRuntime "curse.maven:jei-238222:8108851"

    compileOnly "curse.maven:jade-324717:8068368"
    localRuntime "curse.maven:jade-324717:8068368"

    implementation "io.github.naimjeg:damagenexus:0.1.0"
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

tasks.withType(Test).configureEach {
    failOnNoDiscoveredTests = false
}

def mainMethodTests = [
        'io.github.naimjeg.obeliskdepths.tempering.TemperingTemplateDataTest',
        'io.github.naimjeg.obeliskdepths.tempering.TemperingDirectionTest',
        'io.github.naimjeg.obeliskdepths.worldgen.structure.layout.DungeonConnectorShapeTypeTest',
        'io.github.naimjeg.obeliskdepths.dungeon.site.ResolvedDungeonSiteTest',
        'io.github.naimjeg.obeliskdepths.dungeon.site.DungeonSiteProjectionSourceTest',
        'io.github.naimjeg.obeliskdepths.dungeon.site.DungeonSiteProjectionCacheGuardTest',
        'io.github.naimjeg.obeliskdepths.dungeon.runtime.DungeonRuntimeBoundaryTest',
        'io.github.naimjeg.obeliskdepths.dungeon.session.DungeonKillProgressTest',
        'io.github.naimjeg.obeliskdepths.worldgen.structure.graph.DungeonGraphGeneratorTest',
        'io.github.naimjeg.obeliskdepths.worldgen.structure.layout.DungeonGraphEmbeddingPlannerTest',
]

def mainMethodTestTasks = mainMethodTests.collect { testClassName ->
    def simpleName = testClassName.substring(testClassName.lastIndexOf('.') + 1)
    tasks.register("run${simpleName}", JavaExec) {
        group = 'verification'
        description = "Runs ${testClassName}."
        dependsOn tasks.named('testClasses')
        classpath = sourceSets.test.runtimeClasspath
        mainClass = testClassName
    }
}

tasks.register('runMainMethodTests') {
    group = 'verification'
    description = 'Runs repository test classes that use public static void main assertions.'
    dependsOn mainMethodTestTasks
}

tasks.named('test', Test).configure {
    dependsOn tasks.named('runMainMethodTests')
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
